<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test Demo</string>

    <string name="login">登入</string>
    <string name="email">Email</string>
    <string name="password">密碼</string>
    <string name="passwordstatus">密碼</string>
    <string name="not_have_account">還沒有帳號?</string>
    <string name="have_account">有帳號</string>
    <string name="signup">註冊</string>
    <string name="first_name">姓</string>
    <string name="last_name">名</string>
    <string name="submit">送出</string>
    <string name="msg_email_error">請輸入email</string>
    <string name="msg_password_error">請輸入密碼</string>
    <string name="msg_mismatch">帳密不正確</string>

</resources>
